--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script>
 		function vibrate(){
 			if(navigator){
-				navigator.vibrate([2000,1000,3000])
+				navigator.vibrate([200,100,200,275,425,100,200,100,200,275,425,100,75,25, 75,125,75,25,75,125,100,100])
 			}
 		}
 	</script>
