--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<h1>Welcome Mario</h1>
+	<h1>Welcome SOS</h1>
 	<div>
 		<button id="vibrate" onclick="vibrate()">Vibrate</button>
 		<a href="description.html">Go next</a>
@@ -10,7 +10,7 @@
 	<script>
 		function vibrate(){
 			if(navigator){
-				navigator.vibrate([125,75,125,275,200,275,125,75,125,275,200,600,200,600]);
+				navigator.vibrate([100,30,100,30,100,200,200,30,200,30,200,200,100,30,100,30,100]);
 			}
 		}
 	</script>
