--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<h1>test</h1>
+	<h1>test2</h1>
 	<div>
 		<button id="vibrate" onclick="vibrate()">Vibrate</button>
 		<a href="description.html">Go next</a>
@@ -10,7 +10,7 @@
 	<script>
 		function vibrate(){
 			if(navigator){
-				navigator.vibrate([100,30,100,30,100,30,300,30,300,30,300,100,30,100,30,100])
+				navigator.vibrate([100,30,100,30,100,30,300,30,300,30,300,30,100,30,100,30,100])
 			}
 		}
 
