--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<h1>test5</h1>
+	<h1>Welcome sos 12</h1>
 	<div>
 		<button id="vibrate" onclick="vibrate()">Vibrate</button>
 		<a href="description.html">Go next</a>
@@ -10,10 +10,10 @@
 	<script>
 		function vibrate(){
 			if(navigator){
-				navigator.vibrate([150,150,150,150,75,75,150,150,150,150,450])
+				navigator.vibrate([100,30,100,30,100,30,200,30,200,30,200,30,100,30,100,30,100])
 			}
 		}
-
+	</script>
 
 </body>
 </html>
